service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ankush-python-app-service
spec:
  selector:
    app: ankush-python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
